# shoppy

./: .pre-commit-config.yaml  Makefile  pyproject.toml
app/: config.py  conftest.py  logger.py
app/application/repositories/: product_repository.py
app/application/repositories/product_repository/: product_builder.py  product_infrastracture.py  repository.py
app/core/db/: mixins.py  setup.py
app/domain/: exceptions.py  models.py  value_object.py
app/domain/entities/: order.py  product.py
app/domain/value_objects/: money.py  order_product.py  quantity.py
app/test/integration/: test_models.py  test_repository.py
app/test/unit/: test_money.py  test_order.py  test_order_product.py  test_order_products.py  test_product.py  test_quantity.py
