[tool.poetry]
name = "shoppy"
version = "0.1.0"
description = ""
authors = ["web-lizzard <czarnous.adrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
