[tool.poetry]
name = "shoppy"
version = "0.1.0"
description = ""
authors = ["web-lizzard <czarnous.adrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
